--- a/rest/src/main/webapp/ui/css/tsApp.css
+++ b/rest/src/main/webapp/ui/css/tsApp.css
@@ -32,3 +32,18 @@
 	padding: 0 0 10px;
 	color: #333333;
 }
+
+.top-layer {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	top: 0;
+	left: 0;
+	opacity: 0.5;
+	z-index: 10000;
+	cursor: wait;
+	background-color: #FFFFFF;
+}
+
