--- a/rest/src/main/webapp/ui/css/tsApp.css
+++ b/rest/src/main/webapp/ui/css/tsApp.css
@@ -47,3 +47,14 @@
 	background-color: #FFFFFF;
 }
 
+@media (max-width: 767px) { 
+    .navbar-brand {
+        padding: 0;        
+    }
+
+    .navbar-brand img {
+        margin-top: 5px;
+        margin-left: 5px;
+    }
+}
+
