--- a/rest/src/main/webapp/ui/css/tsMobile.css
+++ b/rest/src/main/webapp/ui/css/tsMobile.css
@@ -1,14 +1,11 @@
 /* quick style for horiontal placement with padding */
 
-.ts-container {
-	padding-left: 50px;
-	padding-top: 85px;
+.loginField {
+	margin: 5px;
 }
 
-.ts-panel {
-	padding-left: 25px;
-	padding-right: 25px;
-	float: left;
+.introText {
+	max-width: 400px;
 }
 
 .alert {
